--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <h1>Preenchimento de Cadastro</h1>
     <form>
-        <label>Nome</label>
-        <input type="nome" />
+        <label for="name">Nome</label>
+        <input id="name" type="name" />
         <br />
-        <label>E-mail</label>
-        <input type="email" />
+        <label for="email">E-mail</label>
+        <input id="email" type="email" />
         <br />
-        <label>Senha</label>
-        <input type="text" />
+        <label for="text">Senha</label>
+        <input id="text" type="text" />
         <br />
-        <button>
+        <button type="submit">
             Cadastrar
         </button>
     </form>
